js file name error

--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
     <hr />
     <div class="coded">Coded by Solange Custódio</div>
 
-    <script src="script.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
